--- a/styles_Lock.css
+++ b/styles_Lock.css
@@ -10,7 +10,9 @@ body {
 }
 
 .key-container {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .key {
@@ -30,4 +32,13 @@ body {
 }
 .key-large {
     transform: scale(1.2);
+}
+.button {
+    background-color: #3498db;
+    color: white;
+    padding: 1px 3px;
+    font-size: 18px;
+    margin: 1px;
+    border: none;
+    border-radius: 5px;
 }
