--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 100;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     justify-content: top;
     height: 100vh;
     background-color: #FAFAD2;
@@ -12,15 +12,15 @@ body {
 
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 20px 10px;
+  background-color: #FAFAD2;
+  padding: 30px 10px;
 }
 
 .header a {
   float: left;
   color: black;
-  text-align: center;
-  padding: 12px;
+  text-align: left;
+  padding: 10px;
   text-decoration: none;
   font-size: 18px; 
   line-height: 25px;
@@ -46,11 +46,11 @@ body {
 .button {
     background-color: #3498db;
     color: white;
-    padding: 300px 240px;
+    padding: 10px 10px;
     font-size: 18px;
     margin: 30px;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -59,4 +59,15 @@ body {
     background-color: #2980b9;
 }
 
-
+.button-open {
+    background-color: #3498db;
+    color: white;
+    padding: 0px 0px;
+    font-size: 18px;
+    margin: 30px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    align-items: center;
+}
